// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders while running 1`] = `
<div
  className="sc-dlnjPT hWZNmz"
>
  <div
    className="sc-eCApGN dNqBsi"
  >
    <span
      className="sc-jSFkmK"
    >
      0
    </span>
    <span
      className="sc-gKAblj jWDDcM"
    >
      42
    </span>
  </div>
  <button
    className="sc-bdnylx sc-gtssRu iwZKpE jsKurr"
    onClick={[Function]}
  >
    Stop
  </button>
</div>
`;

exports[`renders with long break state 1`] = `
<div
  className="sc-dlnjPT hWZNmz"
>
  <div
    className="sc-hKFyIo iSWyBM"
  >
    🛌🛌
  </div>
  <button
    className="sc-bdnylx sc-gtssRu fbGLvz jsKurr"
    onClick={[Function]}
  >
    Start
  </button>
</div>
`;

exports[`renders with pomodoro state 1`] = `
<div
  className="sc-dlnjPT hWZNmz"
>
  <div
    className="sc-hKFyIo iSWyBM"
  >
    🍅
  </div>
  <button
    className="sc-bdnylx sc-gtssRu fbGLvz jsKurr"
    onClick={[Function]}
  >
    Start
  </button>
</div>
`;

exports[`renders with short break state 1`] = `
<div
  className="sc-dlnjPT hWZNmz"
>
  <div
    className="sc-hKFyIo iSWyBM"
  >
    🛌
  </div>
  <button
    className="sc-bdnylx sc-gtssRu fbGLvz jsKurr"
    onClick={[Function]}
  >
    Start
  </button>
</div>
`;
